# standalone-jswrapper

./: CMakeLists.txt
cocos/: CMakeLists.txt
cocos/base/: CMakeLists.txt
cocos/jswrapper/: CMakeLists.txt
cocos/reflection/: CMakeLists.txt  test_main.cpp  test_main.h
cocos/reflection/AzCore/: PlatformDef.h  PlatformIncl.h  base.h
cocos/reflection/AzCore/Debug/: Trace.cpp
cocos/reflection/AzCore/Math/: Crc.h  Crc.inl  Guid.h  MathUtils.h  Random.h  Uuid.cpp  Uuid.h
cocos/reflection/AzCore/Memory/: Memory.h
cocos/reflection/AzCore/Outcome/Internal/: OutcomeStorage.h
cocos/reflection/AzCore/RTTI/: AttributeReader.h  AzStdOnDemandPrettyName.inl  AzStdOnDemandReflection.inl  AzStdOnDemandReflectionSpecializations.cpp  BehaviorContext.cpp  BehaviorContext.h  BehaviorContextUtilities.cpp  BehaviorContextUtilities.h  RTTI.h  ReflectContext.cpp  ReflectContext.h  ReflectionManager.h  TypeInfo.h  TypeInfoSimple.h
cocos/reflection/AzCore/StringFunc/: StringFunc.cpp  StringFunc.h
cocos/reflection/AzCore/std/: allocator_static.h  base.h  createdestroy.h  hash.h  reference_wrapper.h  utils.h
cocos/reflection/AzCore/std/function/: invoke.h
cocos/reflection/AzCore/std/smart_ptr/: intrusive_base.h  intrusive_ptr.h
cocos/reflection/AzCore/std/string/: conversions.h  string.cpp  string.h  tokenize.h
cocos/reflection/AzCore/std/typetraits/: config.h  conjunction.h  disjunction.h  function_traits.h  has_member_function.h  integral_constant.h  invoke_traits.h  is_abstract.h  is_arithmetic.h  is_array.h  is_assignable.h  is_base_of.h  is_class.h  is_compound.h  is_const.h  is_constructible.h  is_convertible.h  is_destructible.h  is_empty.h  is_enum.h  is_floating_point.h  is_function.h  is_fundamental.h  is_integral.h  is_lvalue_reference.h  is_member_function_pointer.h  is_member_object_pointer.h  is_member_pointer.h  is_object.h  is_pod.h  is_pointer.h  is_polymorphic.h  is_reference.h  is_rvalue_reference.h  is_same.h  is_scalar.h  is_signed.h  is_swappable.h  is_trivial.h  is_trivially_copyable.h  (+7 more)
cocos/reflection/AzCore/std/typetraits/internal/: type_sequence_traits.h
demo/: test.cpp
jswrapper-adaptor/bindings/conversions/: jsb_conversions.h
